--- a/inde.html
+++ b/inde.html
@@ -13,11 +13,16 @@
     </style>
 </head>
 <body>
- <h1 class="text-center text-Warning mt-3">search your favorite Foot</h1>
+ <h1 class="text-center text-Warning mt-3" id="head">search your favorite Foot</h1>
 <!-- input group -->
  <div class="input-group mb-3 w-50 mx-auto mt-5">
     <input id="search-field" type="text" class="form-control" placeholder="search your favorite food" aria-label="Recipient's username" aria-describedby="button-addon2">
     <button onclick="searchFood()" class="btn btn-outline-secondary" type="button" id="button-search">search</button>
+  </div>
+  <!-- card ditels -->
+  
+  <div id="meil-detels" class="w-50 mx-auto">
+    
   </div>
 
   <!-- gride card -->
